--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,7 @@
 ---
 output: github_document
 ---
+
 ```{r global_options, include = F}
 knitr::opts_chunk$set(warning = F, message = F, dev = 'svg', fig.align = 'center')
 ```
@@ -19,3 +20,35 @@ After creating `discord_chat_dl.py` and running it with my token, the channel id
 I downloaded all the chat logs in json.
 I have also manually anonymized the usernames.
 
+## Data Import
+```{r import_json}
+library(jsonlite)
+
+chat_json <- read_json('discord_chat_anonymized.json')
+```
+This imports the json chat log as a and R list.
+However, the list is not uniform in fields across message entries as some messages have reactions or
+are missing the field entriely.
+This prevents running the R json list into `data.table::rbindlist` to quickly convert convert the json into a data.frame like
+structure for processing.
+Therefore I extracted the relavent fields with
+[purrr](https://cran.r-project.org/web/packages/purrr/vignettes/other-langs.html) and then stiched it back together into a
+[tibble](https://cran.r-project.org/web/packages/tibble/vignettes/tibble.html).
+
+```{r import_tibble}
+library(purrr)
+library(lubridate)
+library(tibble)
+
+timestamps <- map(chat_json, ~.x$timestamp) %>% unlist() %>% ymd_hms()
+usernames <- map(chat_json, ~.x$author$username) %>% unlist() %>% as.factor()
+messages <- map(chat_json, ~.x$content) %>% unlist()
+
+chat <- tibble(timestamap = timestamps, username = usernames, message = messages)
+
+head(chat)
+```
+
+## Data Anlysis
+
+### Text Tokenization
