--- a/README.Rmd
+++ b/README.Rmd
@@ -7,18 +7,22 @@ knitr::opts_chunk$set(warning = F, message = F, dev = 'svg', fig.align = 'center
 ```
 # Text Analysis of a Discord Chat Group
 
-## Data Acquisition
-To get the data needed for the analysis, there is the
-[discord api Get Channel Message](https://discordapp.com/developers/docs/resources/channel#get-channel-messages)
-that one can use or one can try and find a discord bot to do it for you.
-That requires some setup of the bot so I chose to do bare api calls in python instead.
-Thanks to
-[DiscordArchiver](https://github.com/Jiiks/DiscordArchiver/blob/master/DiscordArchiver/Program.cs#L15)
-for the undocumented (probably old api that may be discontinued on October 16, 2017) url parameter for the token.
+## Thanks to the Editor
+A large thank you to [William Zhu](https://github.com/ZhuWilliam) for editing this poorly
+written document into something nice.
 
-After creating `discord_chat_dl.py` and running it with my token, the channel id, and the id of the last message (not included),
-I downloaded all the chat logs in json.
-I have also manually anonymized the usernames.
+## Data Acquisition
+To get the data needed for analysis, there are two methods. First is the discord api's
+[Get Channel Message](https://discordapp.com/developers/docs/resources/channel#get-channel-messages)
+to manually retrieve, or a discord bot to do it for you.
+However, if you do not wish to setup a bot, you can also use the second method, bare api calls in python.
+
+Big thanks to
+[DiscordArchiver](https://github.com/Jiiks/DiscordArchiver/blob/master/DiscordArchiver/Program.cs#L15)
+for the undocumented (and probably old api that may be discontinued on October 16, 2017) url parameter for the token.
+
+After creating `discord_chat_dl.py` and running it with the token, the channel id, and the id of the last message,
+you can download all of the chat logs in a json format.
 
 ## Data Import
 ```{r import_json}
@@ -26,19 +30,13 @@ library(jsonlite)
 
 chat_json <- read_json('discord_chat_anonymized.json')
 ```
-This imports the json chat log as a and R list.
-However, the list is not uniform in fields across message entries as some messages have reactions or
-are missing the field entriely.
-This prevents running the R json list into `data.table::rbindlist` to quickly convert convert the json into a data.frame like
-structure for processing.
-Therefore I extracted the relavent fields with
-[purrr](https://cran.r-project.org/web/packages/purrr/vignettes/other-langs.html) and then stiched it back together into a
+This imports the json chat log as an R list.
+However, the list is not uniform in fields across message entries as some messages have reactions, a feature introduced later in Discord's development that messages before the update do not have.
+This inconsistency prevents running the list into `data.table::rbindlist`, so I used an alternative.
+I extracted the relevant fields with
+[purrr](https://cran.r-project.org/web/packages/purrr/vignettes/other-langs.html) and then stitched it back together into a
 [data.table](https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html).
-I did not use a
-[tibble](https://cran.r-project.org/web/packages/tibble/vignettes/tibble.html)
-because I am trying to get familiar with data.table.
-The initial code in `discord_chat_analysis.R` uses tibbles and dplyr if you want to see that.
-Then I checked the result with [dplyr's](https://cran.r-project.org/web/packages/dplyr/vignettes/dplyr.html) glimpse.
+I then checked the result with [dplyr's](https://cran.r-project.org/web/packages/dplyr/vignettes/dplyr.html) glimpse.
 
 ```{r import_tibble}
 library(purrr)
@@ -50,21 +48,21 @@ timestamps <- map(chat_json, ~.x$timestamp) %>% unlist() %>% ymd_hms()
 usernames <- map(chat_json, ~.x$author$username) %>% unlist() %>% as.factor()
 messages <- map(chat_json, ~.x$content) %>% unlist()
 
-chat <- data.table(timestamap = timestamps, username = usernames, message = messages)
+chat <- data.table(timestamp = timestamps, username = usernames, message = messages)
 
 glimpse(chat)
 ```
-## Data Anlysis
+## Data Analysis
 
-### Text Tokenization
+### Word Tokenisation
 
-The first step in analyisis is to convert the `chat` data.table into a more convienient
-[tidy format](http://tidytextmining.com/tidytext.html) with one token per row.
-This will be done with [tidytext](https://cran.r-project.org/web/packages/tidytext/vignettes/tidytext.html).
-I will also filter out urls and long digits I discovered later along with anti joining with tidytext's `stop_words`.
+To convert the `chat` data.table into a more convienient
+[tidy format](http://tidytextmining.com/tidytext.html), with one token per row,
+we can use [tidytext](https://cran.r-project.org/web/packages/tidytext/vignettes/tidytext.html).
+URLs, long digits, and common words can cause problems, but they can be filtered out
+with regex and tidytext's `stop_words`.
 
 ```{r tokenization_word}
-library(magrittr) # for %<>% (originator of %>%)
 library(stringr)
 library(tidytext)
 
@@ -72,9 +70,16 @@ chat[, message := str_replace(message, '(https?\\S+)|(d{4,})', '')]
 
 words <- chat %>%
 	unnest_tokens(word, message) %>%
-	.[!data.table(stop_words), on = "word"] %>% # anti join
+	.[!data.table(stop_words), on = 'word', .(timestamp, username, word)] %>% # anti join
 	.[, .N, .(username, word)] %>%
-	.[order(-N)]
+	setorder(-N)
 
 glimpse(words)
+words[, head(.SD, 3), username]
+```
+
+### Bigram Tokenisation
+
+```{r tokenization_bigram}
+
 ```
