--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ written document into something nice.
 To get the data needed for analysis, there are two methods. First is the discord api's
 [Get Channel Message](https://discordapp.com/developers/docs/resources/channel#get-channel-messages)
 to manually retrieve the messages. The second, is to get a discord bot to do it for you.
-However, I did not wish to setup a bot, so I used the second method with bare api calls in python.
+However, if you do not wish to setup a bot, you can use the first method to do bare api calls in python.
 
 Big thanks to
 [DiscordArchiver](https://github.com/Jiiks/DiscordArchiver/blob/master/DiscordArchiver/Program.cs#L15)
