--- a/README.Rmd
+++ b/README.Rmd
@@ -62,7 +62,7 @@ To convert the `chat` data.table into a more convienient
 [tidy format](http://tidytextmining.com/tidytext.html), with one token per row,
 we can use [tidytext](https://cran.r-project.org/web/packages/tidytext/vignettes/tidytext.html).
 URLs, long digits, and common words can cause problems, but they can be filtered out
-with regex and tidytext's `stop_words`. I also filtered out users who did not message a lot.
+with regex and tidytext's `stop_words`. We also filtered out users who did not message a lot.
 
 ```{r tokenization_word}
 library(magrittr) # for %<>% (originator of %>%)
