--- a/README.Rmd
+++ b/README.Rmd
@@ -142,6 +142,25 @@ word_counts %>%
 	labs(x = 'Word', y = 'Word Count', fill = 'Username')
 ```
 
+```{r analysis_weekly_chat_rate}
+#TODO: figure out how is masking lubridate::wday
+posts_by_day <- words %>%
+	.[, .(timestamp = floor_date(timestamp, 'day'))] %>%
+	.[, .(posts_in_day = .N), timestamp] %>%
+	.[, .(timestamp, posts_in_day, day_of_week = lubridate::wday(timestamp, label = TRUE))]
+
+plot <- ggplot(posts_by_day, aes(timestamp, posts_in_day)) +
+	geom_line() +
+	geom_smooth() +
+	labs(x = 'Day', y = 'Post Count in Day')
+
+plot
+
+plot +
+	facet_grid(.~day_of_week) +
+	theme(axis.text.x = element_text(angle = 90, vjust = 0.5,  hjust = 1))
+```
+
 ### Bigram Counts
 
 ```{r analysis_bigram_counts}
