--- a/README.Rmd
+++ b/README.Rmd
@@ -41,8 +41,8 @@ I then checked the result with [dplyr's](https://cran.r-project.org/web/packages
 
 ```{r import_data.table}
 library(purrr)
+library(data.table) # masks some of lubridate's functions
 library(lubridate)
-library(data.table)
 library(dplyr)
 library(dtplyr)
 
@@ -143,11 +143,10 @@ word_counts %>%
 ```
 
 ```{r analysis_weekly_chat_rate}
-#TODO: figure out who is masking lubridate::wday (it's data.table)
 words_by_day <- words %>%
 	.[, .(timestamp = floor_date(timestamp, 'day'))] %>%
 	.[, .(words_in_day = .N), timestamp] %>%
-	.[, .(timestamp, words_in_day, day_of_week = lubridate::wday(timestamp, label = TRUE))]
+	.[, .(timestamp, words_in_day, day_of_week = wday(timestamp, label = TRUE))]
 
 plot <- ggplot(words_by_day, aes(timestamp, words_in_day)) +
 	geom_line() +
