--- a/README.Rmd
+++ b/README.Rmd
@@ -153,9 +153,7 @@ words_by_day <- words %>%
 	.[, .(timestamp = floor_date(timestamp, 'day'))] %>%
 	.[, timestamp := floor_date(timestamp, 'day')]%>%
 	.[, .(words_in_day = .N), timestamp] %>%
-	.[, day_of_week := wday(timestamp, label = TRUE)] %T>% glimpse()
-
-glimpse(words)
+	.[, day_of_week := wday(timestamp, label = TRUE)]
 
 plot <- ggplot(words_by_day, aes(timestamp, words_in_day)) +
 	geom_line() +
