change vertical x axis text to 45 degrees

--- a/README.Rmd
+++ b/README.Rmd
@@ -162,9 +162,12 @@ plot <- ggplot(words_by_day, aes(timestamp, words_in_day)) +
 
 plot
 
+theme_x_axis_text_45 <- theme(axis.text.x = element_text(angle = 45, vjust = 1.1,  hjust = 1.1))
+
 plot +
 	facet_grid(.~day_of_week) +
-	theme(axis.text.x = element_text(angle = 90, vjust = 0.5,  hjust = 1))
+	theme_x_axis_text_45
+	#theme(axis.text.x = element_text(angle = 90, vjust = 0.5,  hjust = 1))
 ```
 
 ```{r analysis_weekly_chat_rate_per_user}
@@ -183,7 +186,12 @@ plot +
 
 plot +
 	facet_grid(username ~ day_of_week) +
-	theme(axis.text.x = element_text(angle = 90, vjust = 0.5,  hjust = 1))
+	theme_x_axis_text_45
+	#theme(axis.text.x = element_text(angle = 45, vjust = 1.1,  hjust = 1.1))
+```
+
+```{r analysis_hourly_chat_rate}
+# words per hour (4 6h chunks or 6 4h chunks)
 ```
 
 ### Bigram Counts
