--- a/README.Rmd
+++ b/README.Rmd
@@ -147,6 +147,10 @@ word_counts %>%
 	labs(x = 'Word', y = 'Word Count', fill = 'Username')
 ```
 
+<details>
+<summary>
+	WIP: Time Bases Analysis
+</summary>
 ```{r analysis_weekly_chat_rate}
 #words_by_day <- words %>%
     #.[, .(timestamp = floor_date(timestamp, 'day'))] %>%
@@ -244,15 +248,21 @@ ggplot(words_by_hour_per_user, aes(timestamp, words_in_hour_per_user)) +
 	labs(x = 'Four Hour Segments', y = 'Non Stop Word Count In Four Hour Chunk') +
 	theme_x_axis_text_45
 ```
+</details>
 
 ### Bigram Counts
 
 ```{r analysis_bigram_counts}
-bigram_counts <- bigrams %>%
+bigram_counts_per_user <- bigrams %>%
+	na.omit() %>%
 	.[, .N, .(username, word1, word2)] %>%
 	setorder(-N)
 
-bigram_counts[, head(.SD, 3), username]
+bigram_counts <- bigram_counts_per_user %>%
+	.[, .(N = sum(N)), .(word1, word2)]
+
+head(bigram_counts, 5)
+bigram_counts_per_user[, head(.SD, 3), username]
 ```
 
 ### Characteristic Words
@@ -289,4 +299,47 @@ word_tf_idf %>%
 	facet_wrap(~username, ncol = 2, scales = 'free') +
 	coord_flip() +
 	labs(title = 'Most Charateristics Words per User', x = NULL, y = 'tf-idf')
+```
+
+### Word Relationships
+
+
+```{r analysis_relationship_bigram}
+library(igraph)
+library(ggraph)
+
+set.seed(23)
+bigram_counts %>%
+	head(75) %>%
+	graph_from_data_frame() %>%
+	# doesnt get rid of the loops... one can hope
+	simplify(remove.multiple = FALSE, remove.loops = TRUE) %>%
+	ggraph(layout = 'fr') +
+	geom_edge_link(
+		aes(edge_alpha = N),
+		show.legend = FALSE,
+		arrow = grid::arrow(type = 'closed', length = unit(0.15, 'inches')),
+		end_cap= circle(0.05, 'inches')
+	) +
+	geom_node_point(color = 'lightblue', size = 5) +
+	geom_node_text(aes(label = name), vjust = 1, hjust = 1) +
+	labs(title = 'Most Frequent Bigrams')
+
+set.seed(88)
+bigram_counts_per_user %>%
+	.[, head(.SD, 4), username] %>%
+	.[, .(word1, word2, username, N)] %T>%
+	glimpse() %>%
+	graph_from_data_frame() %T>%
+	print() %>%
+	simplify(remove.multiple = FALSE, remove.loops = TRUE) %>%
+	ggraph(layout = 'fr') +
+	geom_edge_link(
+		arrow = grid::arrow(type = 'closed', length = unit(0.1, 'inches')),
+		end_cap= circle(0.05, 'inches')
+	) +
+	geom_node_point(color = 'lightblue', size = 2) +
+	geom_node_text(aes(label = name), vjust = 1, hjust = 1) +
+	facet_edges(~username) +
+	labs(title = 'Most Frequent Bigrams by User as Edges')
 ```
